<resources>
    <string name="name_hint">Wprowadź login:</string>
    <string name="password_hint">Wprowadź hasło:</string>
    <string name="login_button">Zaloguj</string>
    <string name="empty_login_or_password">Login i hasło nie mogą być puste!</string>
    <string name="login_failed">Błędny login lub hasło!</string>
    <string name="login_success">Zalogowano!</string>
    <string name="confirm_password">Potwierdź hasło:</string>
    <string name="register">Zarejestruj się!</string>
    <string name="register_to_login">Posiadasz już konto? Zaloguj się!</string>
    <string name="login_to_register">Nie posiadasz konta? Zarejestruj się!</string>
    <string name="password_dont_match">Podano różne hasła!</string>
    <string name="already_exists">Użytkownik o takim loginie już istnieje!</string>
    <string name="registration_successful">Pomyślnie zarejestrowano!</string>
    <string name="registration_failed">Podczas rejestracji wystąpił błąd!</string>
    <string name="welcome">Witaj %1$s!</string>
    <string name="products">Produkty</string>
    <string name="location">Lokacja</string>
    <string name="settings">Ustawienia</string>
    <string name="logout">Wyloguj</string>
    <string name="search">Wyszukaj</string>
    <string name="change_password">Zmień hasło</string>
    <string name="new_password">Wprowadź nowe hasło:</string>
    <string name="new_password_confirm">Potwierdź nowe hasło:</string>
    <string name="delete_account">Usuń konto</string>
    <string name="empty_password">Hasło nie może być puste!</string>
    <string name="password_changed">Hasło zostało zmienione</string>
    <string name="account_deleted">Konto zostało usunięte</string>
    <string name="users">Użytkownicy</string>
    <string name="price">Cena: </string>
    <string name="name">Nazwa: </string>
    <string name="quantity">Ilość: </string>
    <string name="photo">Zrób zdjęcie</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="route">Trasa</string>
    <string name="empty">Pola nie mogą być puste!</string>
    <string name="app_name" translatable="false">Hurtownia</string>
    <string name="login" translatable="false">Login: </string>
    <string name="password">Hasło: </string>
    <string name="role">Rola:</string>
    <string name="user">Użytkownik</string>
    <string name="employee">Pracownik</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="update">Zaktualizuj</string>
</resources>